Update setup.sh
im tired changing that thing